fixed overflow issue in the create post

--- a/src/components/Createpost.css
+++ b/src/components/Createpost.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  width: fit-content;
 }
 
 #post-btn {
@@ -49,12 +50,13 @@
 }
 
 .details {
+  max-width: 450px;
   border-top: 1px solid rgb(173, 173, 173);
   padding-top: 10px;
 }
 
 textarea {
-  width: 100%;
+  max-width: 90%;
   border: none;
   outline: none;
   resize: vertical;
